--- a/src/components/HotelSelectionOptions/HotelSelectionOptions.css
+++ b/src/components/HotelSelectionOptions/HotelSelectionOptions.css
@@ -53,7 +53,7 @@
 
 .option-card1 {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr;
+  /* grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr; */
   border: 1px solid #ddd;
   border-radius: 6px;
   padding: 12px;
